@@ -108,7 +108,8 @@ MemoWidget <- function(prefix,widget,dbTable){
           if ( inherits(IsOpen,"simpleError") || IfCont){ ## if not open or the same.
               tryCatch(eval(parse(text=sprintf("dispose(.rqda$.%smemo)",prefix))),error=function(e) {})
               assign(sprintf(".%smemo",prefix),gwindow(title=sprintf("%s Memo:%s",prefix,Selected),
-                                                       parent=c(395,10),width=600,height=600),env=.rqda)
+                                                       parent=getOption("widgetCoordinate"),width=600,height=600),
+                     env=.rqda)
               assign(sprintf(".%smemo2",prefix),
                      gpanedgroup(horizontal = FALSE, con=get(sprintf(".%smemo",prefix),env=.rqda)),
                      env=.rqda)
@@ -225,19 +226,6 @@ SearchFiles <- function(pattern,content=FALSE,Fid=NULL,Widget=NULL,is.UTF8=FALSE
     } else cat("Open a project first.\n")
 }
 
-## select <- function(x,multiple=TRUE,title=NULL,...){
-## ## select a method for selecting items conditional on the OS, to maxizied the chance of GUI-style of selection.
-## ## use as replacement of  select.list.
-##   if (.Platform$OS.type == "unix" && capabilities("tcltk") && capabilities("X11"))
-##     {
-##       ans <- tcltk::tk_select.list(x,multiple=multiple,title=title,...)
-##     } else {
-##       ans <- select.list(x,multiple=multiple,title=title,...)
-##     }
-##   return(list(selected=ans))
-## }
-
-
 RunOnSelected <- function(x,multiple=TRUE,expr,enclos,title=NULL,...){
   if (is.null(title)) title <- ifelse(multiple,"Select one or more","Select one")
   g <- gwindow(title=title,wid=250,heigh=600,parent=c(395, 10))
@@ -264,7 +252,7 @@ RunOnSelected <- function(x,multiple=TRUE,expr,enclos,title=NULL,...){
 }
 
 
-gselect.list <- function(list,multiple=TRUE,title=NULL,width=200, height=500,...){
+gselect.list <- function(list,multiple=TRUE,title=NULL,width=200, height=500,x=420,y=2,...){
   ## gtk version of select.list()
   ## Thanks go to John Verzani for his help.
   title <- ifelse(multiple,"Select one or more","Select one")
@@ -274,7 +262,43 @@ gselect.list <- function(list,multiple=TRUE,title=NULL,width=200, height=500,...
     x1<-ggroup(horizontal=FALSE) # no parent container here
     x2<-gtable(list,multiple=multiple,con=x1,expand=TRUE)
     gtkWidgetSetSizeRequest(x1@widget@widget, width=width, height=height)
-    ret <- gbasicdialog(title=title,widget=x1,handler=function(h,...){
+
+ gbasicdialog2 <- function(title="Dialog",widget,action=NULL,handler=NULL,x,y,..., toolkit=guiToolkit()){
+             parent <- gtkWindowNew(show=FALSE) ## modified from gbasicdialog of gWidgetRGtk2
+             dlg = gtkDialog(title,
+              parent=parent,
+              c("modal"),
+              "gtk-cancel", GtkResponseType["cancel"],
+              "gtk-ok", GtkResponseType["ok"])
+            dlg$SetTitle(title)
+            dlg$GrabFocus()
+            dlg$GetWindow()$Move(as.integer(x),as.integer(y))
+            dlg$GetWindow()$Raise()
+            tag(widget,"dlg") <- dlg
+            group = ggroup()
+            add(group, widget, expand=TRUE)
+            dlg$GetVbox()$PackStart(group@widget@block)
+            response = dlg$Run()
+            h = list(obj=widget, action=action)
+            if(response == GtkResponseType["cancel"] ||
+               response == GtkResponseType["close"] ||
+               response == GtkResponseType["delete-event"]) {
+               dlg$Destroy()
+              return(FALSE)
+            } else if(response == GtkResponseType["ok"]) {
+              if(!is.null(handler))
+                handler(h)
+              dlg$Destroy()
+              return(TRUE)
+            } else {
+              gwCat("Don't know this response")
+              print(response)
+              dlg$Destroy()
+              invisible(NA)
+            }
+  }
+
+    ret <- gbasicdialog2(title=title,widget=x1,x=x,y=y,handler=function(h,...){
       value <- svalue(x2)
       assign("selected",value,env=h$action$env)
       dispose(x1)
