@@ -6,7 +6,7 @@
   Select item(s) from a character vector.
 }
 \usage{
-gselect.list(list, multiple = TRUE, title = NULL, width = 200, height = 500, ...)
+gselect.list(list, multiple = TRUE, title = NULL, width = 200, height = 500,x=420,y=2 ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -15,10 +15,15 @@ gselect.list(list, multiple = TRUE, title = NULL, width = 200, height = 500, ...
   \item{title}{optional character string for window title.}
   \item{width}{integer. width of the widget.}
   \item{height}{integer. heighth of the widget.}
+  \item{x}{}
+  \item{y}{}
   \item{\dots}{Not used currently.}
 }
 \details{
 GTK version of \code{\link[utils]{select.list}}.
+}
+\Note{
+The license of this function is subject to interpretation of the orginal author.
 }
 \value{
   A character vector of selected items with encoding of UTF-8. If no item was selected (or
